--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "description": "Dakota Schaeffer's Personal blog hosted on github pages. Uses JonUK's template eleventy blog.",
   "scripts": {
-    "build": "env NODE_ENV=production npx eleventy --pathprefix da-scher-blog",
+    "build": "env NODE_ENV=production npx eleventy",
     "serve": "npx eleventy --serve",
     "debug": "DEBUG=* npx eleventy",
     "test": "jest"
